--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -34,9 +34,9 @@
         <version>5.0.2.Final</version>
     </dependency>
     <dependency>
-        <groupId>org.xerial</groupId>
-        <artifactId>sqlite-jdbc</artifactId>
-        <version>3.8.11.2</version>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>9.3-1104-jdbc41</version>
     </dependency>
 
 </dependencies>
