--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -38,6 +38,11 @@
         <artifactId>postgresql</artifactId>
         <version>9.3-1104-jdbc41</version>
     </dependency>
+    <dependency>
+        <groupId>org.checkerframework</groupId>
+        <artifactId>checker</artifactId>
+        <version>1.9.11</version>
+    </dependency>
 
 </dependencies>
     <build>
